@@ -1,3 +1,6 @@
+2011-01-16 Alexander Opitz <opi@gmx.at>
+* #57 Add cache clearing
+
 2011-01-13 Alexander Opitz <opi@gmx.at>
 * #57 Add function to remove explizit a hash
 
